# phanthymotus

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_zh.md  docker-compose.yml  pyproject.toml
agent-core/: Dockerfile  pyproject.toml  run.zsh
agent-core/resource/memory/: identity.md  prompt_memory.md  prompt_system.md
agent-core/resource/memory/defaults/: prompt_memory_init.md  prompt_system.md
agent-core/src/: chat_history.py  collector.py  config.py  event_bus.py  log.py  mcp_client.py  prompt.py  ros2_bridge.py  scheduler.py  start.py  task_store.py  topic_subscriber.py
agent-core/src/api/: agent_definition.py  canvas.py  config.py  drivers.py  event.py  file.py  history.py  inspection.py  logging.py  mcp_manage.py  motus_stream.py  registry.py  skills.py  system.py  world.py
agent-core/src/client/: __init__.py  llm.py
agent-core/src/event/: __init__.py  finish.py  llm.py  memory.py  skills.py  task.py
agent-core/web/: index.html
agent-core/web/css/: style.css
agent-core/web/js/: activity-log.js  agent-definition.js  app.js  canvas.js  dashboard.js  deploy-panel.js  detail-panel.js  drivers-overview.js  flow-view.js  history.js  inspector-host.js  mic-stream.js  monitor-dashboard.js  monitor-mode.js  motus-stream.js  setup.js  sidebar.js  skills.js
agent-core/web/js/renderers/: activity.js  audio.js  camera.js  htmsg.js  image.js  kv-latest.js  lidar.js  mapping.js  pointcloud.js  skeleton.js  text.js  video.js
deploy/: .env.example  build_common.sh  build_core.sh  build_perception.sh  build_restart.sh  build_ros_base.sh  (+4 more)
(+26 files in other folders)
