[project]
name = "code-head"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "docker>=7.1.0",
    "fastapi[all]>=0.135.3",
    "jsonschema>=4.0",
    "numpy>=1.24",
    "openai>=2.31.0",
    "pyyaml>=6.0.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
